--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -13,6 +13,8 @@
 @use "./components/catalog";
 @use "./components/single";
 @use "./components/loading";
+@use "./components/contact";
+@use "./components/dostavka";
 
 .title_all_product {
   color: rgb(69, 69, 69);
