--- a/src/sass/components/_dostavka.scss
+++ b/src/sass/components/_dostavka.scss
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: space-between;
   margin: 50px;
+  gap: 250px;
 
   h1 {
     color: rgb(69, 69, 69);
@@ -21,7 +22,6 @@
   gap: 30px;
   margin-top: 25px;
 
-
   h2 {
     color: rgb(0, 0, 0);
     font-family: "Manrope";
@@ -40,33 +40,35 @@
     letter-spacing: 0%;
     text-align: left;
     width: 640px;
-
   }
 
-  span{
-    color:rgba(47, 77, 163, 1);
+  span {
+    color: rgba(47, 77, 163, 1);
+    font-family: "Manrope";
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 140%;
+    letter-spacing: 0%;
+    text-align: left;
   }
 }
 
-
 @media (max-width: 990px) {
-    .text_wrapper_payment{
-        flex-direction: column;
-        h1{
-            text-align: center;
-            font-size: 40px;
-            width: 100%;
-        }
-    } 
+  .text_wrapper_payment {
+    flex-direction: column;
+    gap: 30px;
+    h1 {
+      text-align: center;
+      font-size: 40px;
+      width: 100%;
+    }
+  }
 }
 
 @media (max-width: 780px) {
-    .text_oplata_wrapper{
-
-
-        p{
-            width: 100%;
-        }
-
+  .text_oplata_wrapper {
+    p {
+      width: 100%;
     }
+  }
 }
