--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -15,6 +15,7 @@
 @use "./components/loading";
 @use "./components/contact";
 @use "./components/dostavka";
+@use "./components/carts";
 
 .title_all_product {
   color: rgb(69, 69, 69);
