--- a/src/sass/components/_admin.scss
+++ b/src/sass/components/_admin.scss
@@ -8,7 +8,22 @@
   background-color: rgb(69 69 69);
   padding: 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  height: 100%;
+  height: 600vh;
+
+  button {
+    border-radius: 100px;
+    width: 100%;
+    padding: 10px 20px;
+    border: none;
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+    font-family: "Manrope";
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 25px;
+    letter-spacing: 0%;
+    text-align: center;
+  }
 
   h1 {
     color: rgb(255, 255, 255);
@@ -20,19 +35,33 @@
     text-align: left;
   }
 
-  ul{
+  ul {
     list-style: none;
     display: flex;
     flex-direction: column;
     gap: 20px;
     margin-top: 40px;
 
-    li{
+    li {
       display: flex;
       align-items: center;
       gap: 10px;
+      padding: 10px 20px;
     }
-    a{
+
+    li:hover {
+      color: rgb(255, 255, 255);
+      transition: 0.3s;
+      padding: 10px 20px;
+      background-color: rgb(16, 16, 16);
+      border-radius: 100px;
+
+      svg {
+        color: rgb(255, 255, 255);
+        transition: 0.3s;
+      }
+    }
+    a {
       text-decoration: none;
       color: rgb(255, 255, 255);
       font-family: "Manrope";
@@ -45,65 +74,63 @@
   }
 }
 
+.mange_title {
+  text-align: center;
+}
 
-.mange_title{
+.wrapper_products {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  margin-left: 100px;
+  margin-top: 40px;
+}
+
+.wrapper_pro_btn {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.form_edit {
+  width: 500px;
+  background-color: rgb(255, 255, 255);
+  padding: 20px;
+  position: fixed;
+  z-index: 1001;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+
+  input {
+    width: 100%;
+    padding: 10px;
+    border-radius: 10px;
+    border: 1px solid rgb(0, 0, 0);
+    outline: none;
+  }
+
+  button {
+    width: 100%;
+    padding: 10px;
+    border-radius: 10px;
+    border: 1px solid rgb(0, 0, 0);
+    outline: none;
+    background-color: rgb(69, 69, 69);
+    color: white;
+    font-family: "Manrope";
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 25px;
+    letter-spacing: 0%;
     text-align: center;
+  }
 }
 
-.wrapper_products{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    margin-left: 100px;
-    margin-top: 40px;
-}
-
-.wrapper_pro_btn{
-    display: flex;
-    align-items: center;
-    gap: 10px
-    ;
-}
-
-.form_edit{
-    width: 500px;
-    background-color: rgb(255, 255, 255);
-    padding: 20px;
-    position: fixed;
-    z-index: 1001;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    border-radius: 20px;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-
-    input{
-        width: 100%;
-        padding: 10px;
-        border-radius: 10px;
-        border: 1px solid rgb(0, 0, 0);
-        outline: none;
-    }
-
-    button{
-        width: 100%;
-        padding: 10px;
-        border-radius: 10px;
-        border: 1px solid rgb(0, 0, 0);
-        outline: none;
-        background-color: rgb(69, 69, 69);
-        color: white;
-        font-family: "Manrope";
-        font-size: 18px;
-        font-weight: 600;
-        line-height: 25px;
-        letter-spacing: 0%;
-        text-align: center;
-    }
-}
-
-.create_form{
+.create_form {
   width: 600px;
   background-color: rgb(255, 255, 255);
   padding: 20px;
@@ -115,7 +142,7 @@
   margin-left: 100px;
   margin-top: 40px;
 
-  input{
+  input {
     width: 100%;
     padding: 10px;
     border-radius: 10px;
@@ -123,7 +150,7 @@
     outline: none;
   }
 
-  button{
+  button {
     width: 100%;
     padding: 10px;
     border-radius: 10px;
@@ -139,14 +166,14 @@
     text-align: center;
   }
 
-  button:hover{
+  button:hover {
     cursor: pointer;
     background-color: rgb(16, 16, 16);
     color: white;
     transition: 0.5s;
   }
 
-  textarea{
+  textarea {
     width: 100%;
     padding: 10px;
     border-radius: 10px;
