--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -29,3 +29,34 @@
   text-align: left;
   margin: 20px 0;
 }
+
+
+.not_found{
+  display: grid;
+  justify-content: center;
+  gap: 20px
+  ;
+  margin-top: 40px;
+
+  img{
+    width: 100%;
+    object-fit: contain;
+  }
+
+  button{
+    margin: 20px 0;
+    padding: 10px 20px;
+    border-radius: 100px;
+    border: none;
+    background-color: rgb(69, 69, 69);
+    color: white;
+    font-family: "Manrope";
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 22px;
+    letter-spacing: 0%;
+    text-align: center;
+    width: 200px;
+    margin: 0 auto;
+  }
+}
